<resources>
    <string name="app_name">Rok trajanja</string>
    <string name="set_notification_time">Set notification sending time</string>
    <string name="add_article">Add an article</string>
    <string name="article_list">View all articles</string>
    <string name="send_daily_notifications">Get daily notifications</string>
    <string name="delete_article">Delete article</string>
    <string name="pick_date">Pick date</string>
    <string name="article_name">Article name</string>
    <string name="save_article">Save</string>
    <string name="detect_date">Detect date</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="crop">Crop image</string>
    <string name="detected_date">Detected date:</string>
    <string name="settings">App settings</string>
    <string name="change_language">Change language</string>
    <string name="already_expired">Already expired</string>
    <string name="expiration_less_than_7_days">Expiring soon (expiring in &lt;7 days)</string>
    <string name="expiration_less_than_14_days">Expiring later (expiring in &lt;14 days)</string>
    <string name="expiration_less_than_30_days">Good products (expiring in &lt;30 days)</string>
    <string name="expiration_more_than_30_days">Great products (expiring in &gt;30 days)</string>
    <string name="article_category">Article category</string>
    <string name="notification_time_info">Notifications about how many articles have expired or expire soon will be sent daily at:</string>

    <string-array name="category_names">
        <item>Dairy Goods</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Cereals</item>
        <item>Frozen Goods</item>
        <item>Spices</item>
        <item>Bread</item>
        <item>Confectionery</item>
        <item>Coffee and tea</item>
        <item>Sauces</item>
        <item>Noodles and pasta</item>
        <item>Pet food</item>
        <item>Canned goods</item>
        <item>Child care goods</item>
        <item>Household products</item>
        <item>Medicine</item>
        <item>Other</item>
    </string-array>

    <string-array name="category_values">
        <item>Dairy Goods</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Cereals</item>
        <item>Frozen Goods</item>
        <item>Spices</item>
        <item>Bread</item>
        <item>Confectionery</item>
        <item>Coffee and tea</item>
        <item>Sauces</item>
        <item>Noodles and pasta</item>
        <item>Pet food</item>
        <item>Canned goods</item>
        <item>Child care goods</item>
        <item>Household products</item>
        <item>Medicine</item>
        <item>Other</item>
    </string-array>

    <string name="toast_input_article_name">Please input a name for the article</string>
    <string name="toast_select_article_category">Please select the article\'s category</string>
    <string name="toast_select_article_expiration_date">Please select an expiration date for the article</string>
    <string name="toast_camera_denied">Camera permission denied</string>
    <string name="toast_date_fail">Unable to detect a date</string>
    <string name="toast_storage_denied">Data storage permission denied</string>
    <string name="expiration_date">Expiration date:</string>
    <string name="expires_today">Expires today</string>
    <string name="expires_tomorrow">Expires tomorrow</string>
    <string name="expired_yesterday">Expired yesterday</string>
    <string name="expired">Expired</string>
    <string name="days_ago">days ago</string>
    <string name="expires_in">Expires in</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="expired_today">Expired today</string>
    <string name="all_articles">All articles</string>
    <string name="removal_title">Article removal</string>
    <string name="removal_message">Are you sure that you want to remove this article from the list?</string>
    <string name="remove">Remove</string>
    <string name="date_info">Change date format (day/month, month/day)</string>
    <string name="main_menu_title">Expiration date</string>
    <string name="dan">dan</string>
    <string name="notification_one_expired">1 article has expired.</string>
    <string name="notifications_multiple_expired">articles have expired.</string>
    <string name="notification_one_today">1 article expires today.</string>
    <string name="notification_multiple_today">articles are expiring today.</string>
    <string name="category_info">Article category</string>
    <string name="month_day_pattern">month / day</string>
    <string name="day_month_pattern">day / month</string>
    <string name="choose_language">Choose a language</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
</resources>