<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <EditText
        android:id="@+id/articleNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/article_name"
        android:hint="@string/article_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/categoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleNameEditText"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/articleCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_category"
            android:padding="5sp"
            android:textColor="@color/textColor"
            android:textSize="20sp" />
        <Spinner
            android:id="@+id/articleCategorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5sp"
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:weightSum="5"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryLayout">

        <TextView
            android:id="@+id/detectedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/detected_date"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/actualDetectedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.2"
            android:padding="10sp"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/pickDateButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@drawable/transparent_background_bordered_button"
            android:contentDescription="@string/pick_date"
            android:src="@android:drawable/ic_menu_month" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateLayout"
        app:layout_constraintVertical_bias="0.5">

        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/transparent_background_bordered_button"

            android:contentDescription="@string/save_article"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_save"

            android:layout_margin="5sp"/>

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/transparent_background_bordered_button"

            android:contentDescription="@string/camera"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_camera"

            android:layout_margin="5sp"/>

        <ImageButton
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/transparent_background_bordered_button"

            android:contentDescription="@string/gallery"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_gallery"

            android:layout_margin="5sp"/>

        <ImageButton
            android:id="@+id/cropButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/transparent_background_bordered_button"

            android:contentDescription="@string/crop"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_crop"

            android:layout_margin="5sp"/>

        <Button
            android:id="@+id/detectButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/transparent_background_bordered_button"
            android:text="@string/detect_date"
            android:textColor="@color/textColor"
            android:textSize="16sp"

            android:layout_margin="5sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>